# 2023_advent_of_code

./: .pdm-python  LICENSE  README.md  pyproject.toml
day1/: problem.md  solution.py
src/aoc/: __main__.py  database.py  utility.py
src/aoc/day1/: solution.py  summary.md
src/aoc/day2/: problem.md  solution.py  summary.md
src/aoc/day3/: problem.md  solution.py
src/aoc/day4/: problem.md  solution.py
src/aoc/day5/: part_one.py  part_two.py  problem.md  solution.py
src/aoc/day6/: problem.md  solution.py
tests/: test_day1.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py
